--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <title>哈哈哈-好笑的東西</title>
 <font size="5">哈哈哈-好笑的東西</font>
+<a href="https://charlie-moomoo.github.io/hahaha/truck">卡車搞笑圖</a><div></div>
+<a href="https://charlie-moomoo.github.io/hahaha/paper">紙張搞笑圖</a>
