--- a/paper/index.html
+++ b/paper/index.html
@@ -1,3 +1,3 @@
-<img src="https://charlie-moomoo.github.io/hahaha/file/paper-01.png">
-<img src="https://charlie-moomoo.github.io/hahaha/file/paper-02.png">
-<img src="https://charlie-moomoo.github.io/hahaha/file/paper-03.png">
+<img src="https://charlie-moomoo.github.io/hahaha/file/paper/paper-01.png">
+<img src="https://charlie-moomoo.github.io/hahaha/file/paper/paper-02.png">
+<img src="https://charlie-moomoo.github.io/hahaha/file/paper/paper-03.png">
